--- a/webserver/opentrain/analysis/static/analysis/tpls/show_reports_tpl.html
+++ b/webserver/opentrain/analysis/static/analysis/tpls/show_reports_tpl.html
@@ -6,10 +6,10 @@
 			<button type="submit" class="btn btn-success btn-sm">
 				<span class="glyphicon glyphicon-search"></span>
 			</button>
-			<button ng-show="reportsStatus == 'done'" class="btn btn-success btn-sm">
+			<button type="button" ng-show="reportsStatus == 'done' && !liveMode" class="btn btn-success btn-sm" ng-click="goLive()">
 				Go Live
 			</button>
-			<button ng-show="reportsStatus == 'done'" class="btn btn-danger btn-sm">
+			<button type="button" ng-show="reportsStatus == 'done' && liveMode" class="btn btn-danger btn-sm" ng-click="stopLive()">
 				Stop Live
 			</button>
 		</form>
