--- a/webserver/opentrain/analysis/static/analysis/tpls/show_reports_tpl.html
+++ b/webserver/opentrain/analysis/static/analysis/tpls/show_reports_tpl.html
@@ -12,6 +12,12 @@
 			<button type="button" ng-show="reportsStatus == 'done' && liveMode" class="btn btn-danger btn-sm" ng-click="stopLive()">
 				Stop Live
 			</button>
+			<span ng-show="reportsStatus == 'done' && liveMode">
+			<label>
+				<input type="checkbox"  ng-model="input.autoZoom">
+				auto zoom
+			</label>
+			</span>
 		</form>
 		<br/>
 		<div class="well" ng-show="reportsStatus == 'wip'">
