--- a/webserver/opentrain/analysis/static/analysis/tpls/show_reports_tpl.html
+++ b/webserver/opentrain/analysis/static/analysis/tpls/show_reports_tpl.html
@@ -28,13 +28,7 @@
 				Map for device id <b>{{input.selectedDevice.device_id}}</b>
 			</p>
 			<p>
-				Total # of reports: {{reports.length}}
-			</p>
-			<p>
-				With loc: {{locCount}}
-			</p>
-			<p>
-				Without loc: {{noLocCount}} 
+				Total # of reports (with loc): {{reports.length}}
 			</p>
 			<p>
 				From {{reports[0].timestamp | date:'HH:mm:ss' }} <br/>
