--- a/webserver/opentrain/analysis/static/analysis/tpls/show_reports_tpl.html
+++ b/webserver/opentrain/analysis/static/analysis/tpls/show_reports_tpl.html
@@ -42,7 +42,7 @@
 	</div>
 	<div class="col-md-9">
 		<div ng-show="reportsStatus == 'done'">
-			<leaflet width="800" height="500"></leaflet> 
+			<leaflet id="my-leaflet" width="800" height="600"></leaflet> 
 		</div>
 	</div>
 </div>
