--- a/webserver/opentrain/analysis/static/analysis/tpls/live_trains_tpl.html
+++ b/webserver/opentrain/analysis/static/analysis/tpls/live_trains_tpl.html
@@ -1,8 +1,14 @@
 <div class="row">
-	<div class="col-md-3">
+	<div class="col-md-4">
 		<h2>Current Trips</h2>
+		<div ng-repeat="(tripId,tripData) in tripDatas">
+			<input type="checkbox" ng-model="input.showTrips[tripId]">
+			{{tripId}} {{tripData.stop_times[0].stop.stop_name}} <span class="glyphicon glyphicon-arrow-right"></span>
+			{{tripData.stop_times[tripData.stop_times.length-1].stop.stop_name}}
+			
+		</div>
 	</div>
-	<div class="col-md-9">
+	<div class="col-md-8">
 		<div>
 			<leaflet id="my-leaflet" width="800" height="600"></leaflet> 
 		</div>
