--- a/webserver/opentrain/analysis/static/analysis/tpls/live_trains_tpl.html
+++ b/webserver/opentrain/analysis/static/analysis/tpls/live_trains_tpl.html
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-4">
-		<h2>Current Trips</h2>
+		<h2>Current Trips (Disclaimer: Dummy - not real info!!!)</h2>
 		<div ng-hide="initialDone">
 			<div class="progress progress-striped active">
 				<div class="progress-bar"  role="progressbar" aria-valuenow="{{progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{progress}}%">
