--- a/webserver/opentrain/analysis/static/analysis/tpls/live_trains_tpl.html
+++ b/webserver/opentrain/analysis/static/analysis/tpls/live_trains_tpl.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-md-4">
 		<h2>Current Trips</h2>
-		<h4>Dummy - not real info!!!</h4>
+		<h4>Work in progress</h4>
 		<div ng-hide="initialDone">
 			<div class="progress progress-striped active">
 				<div class="progress-bar"  role="progressbar" aria-valuenow="{{progress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{progress}}%">
@@ -9,11 +9,11 @@
 				</div>
 			</div>
 		</div>
+		<input type="checkbox" ng-change="showReportedOnlyChange()" ng-model="input.showReportedOnly">Only Reported Trips
 		<div ng-repeat="(tripId,tripData) in tripDatas">
 			<input type="checkbox" ng-change="showTripsChange()"  ng-model="input.showTrips[tripId]">
 			{{tripId}} {{tripData.stop_times[0].stop.stop_name}} <span class="glyphicon glyphicon-arrow-right"></span>
 			{{tripData.stop_times[tripData.stop_times.length-1].stop.stop_name}}
-
 		</div>
 	</div>
 	<div class="col-md-8">
