--- a/webserver/opentrain/analysis/static/analysis/tpls/live_trains_tpl.html
+++ b/webserver/opentrain/analysis/static/analysis/tpls/live_trains_tpl.html
@@ -20,7 +20,7 @@
 			{{tripId}} {{tripData.stop_times[0].stop.stop_name}} <span class="glyphicon glyphicon-arrow-right"></span>
 			{{tripData.stop_times[tripData.stop_times.length-1].stop.stop_name}}
 			<div ng-show="input.showDetails[tripId]">
-				<table>
+				<table class="table table-striped">
 				<tr>
 					<th>Seq</th>
 					<th>Stop</th>
