--- a/webserver/opentrain/analysis/static/analysis/tpls/live_trains_tpl.html
+++ b/webserver/opentrain/analysis/static/analysis/tpls/live_trains_tpl.html
@@ -1,6 +1,7 @@
 <div class="row">
 	<div class="col-md-4">
 		<div class="page-header">
+			<h2>Live Trains [WIP]</h2>
 		</div>
 		<div ng-hide="initialDone">
 			<div class="progress progress-striped active">
