--- a/webserver/opentrain/analysis/static/analysis/tpls/live_trains_tpl.html
+++ b/webserver/opentrain/analysis/static/analysis/tpls/live_trains_tpl.html
@@ -1,7 +1,10 @@
 <div class="row">
 	<div class="col-md-4">
 		<div class="page-header">
-			<h2>Live Trains [WIP]</h2>
+			<h2>Live Trains
+				<span ng-show="isFake">[Simulated]</span>
+				<span ng-hide="isFake">[WIP]</span>
+			</h2>
 		</div>
 		<div ng-hide="initialDone">
 			<div class="progress progress-striped active">
@@ -10,10 +13,6 @@
 				</div>
 			</div>
 		</div>
-		<button class="btn btn-sm" ng-click="showReportedOnly()">Only Reported Trips</button>
-		<button class="btn btn-sm" ng-click="showHideAll(true)">Show All</button>
-		<button class="btn btn-sm" ng-click="showHideAll(false)">Hide All</button>
-		<hr/>
 		<div ng-repeat="trip in trips" ng-controller="TripController">
 			<img ng-show="trip.cur_point" width="32" height="15" ng-src="/static/common/img/live.gif"></img>
 			<img ng-hide="trip.cur_point" width="32" height="15" ng-src="/static/common/img/no_live.png"></img>
